# teams-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_server_teams/: __init__.py  __main__.py  auth.py  contacts.py  graph.py  server.py
src/teams_mcp/: __init__.py  __main__.py  auth.py  contacts.py  graph.py  server.py
tests/: test_server.py
