[project]
name = "mcp-server-teams"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to read and send Microsoft Teams messages"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "ELITEA AI", email = "info@elitea.ai"}]
keywords = ["teams", "microsoft", "mcp", "llm", "graph-api"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "httpx>=0.27",
    "msal>=1.28",
    "mcp>=1.1.3",
]

[project.scripts]
mcp-server-teams = "mcp_server_teams:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
